@@ -3,7 +3,9 @@ Version 2023.1.0 (2023-01-01)
 - Allow to disable cache
 - Allow to disable un_ignore load
 - Add local client
+- Use local client in tests
 - Move event() code to central_unit
+- Move listDevices() code to central_unit
 
 Version 2022.12.12 (2022-12-30)
 - Add un_ignore list to central config
